# ReadMapper

./: CMakeLists.txt  Cigar.cpp  Cigar.h  DataIO.cpp  DataIO.h  StringMatcher.cpp  StringMatcher.h  SuffixTree.cpp  SuffixTree.h  main.cpp
